--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,4 +1,4 @@
-<<% provide(:title, 'Contact Us') %>
+<% provide(:title, 'Contact Us') %>
 <h1>Contact Us</h1>
 <p>
   The <a href="http://railstutorial.jp/">Ruby on Rails Tutorial</a>
